{
    "name": "InputActionsSystem",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "0350dd04-1e39-4161-83dc-898946436fc0",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "cae2ce4c-c0a2-42ce-b2e1-798814e94450",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PowerShoot",
                    "type": "Button",
                    "id": "a9b4888b-bc8d-413b-a3b1-9b20d2a344b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseLook",
                    "type": "PassThrough",
                    "id": "eb7ad548-3341-479d-a3a8-0882db6a1048",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "c6dd3146-f449-4c0b-8622-7739ced8fc37",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8cce268a-bbfa-45e3-ba71-abf6611220eb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1fbaf58f-08a9-40bc-ac34-38e3a8f0ed9d",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00f3d276-ecf8-4c24-9d34-f322621a1383",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81b103e3-644d-46f7-b66d-caae0a340bc8",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b55ee52-59b6-4763-8451-7f7dde741c00",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ad3e65c-63fc-486f-a229-04e730234181",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PowerShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MenuControls",
            "id": "7cc6d022-008b-425a-a371-ab2caf98b3af",
            "actions": [
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "64dcba63-6cb3-476d-936b-623707ca5adf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "917ceb6c-3ee4-4ec6-a2d9-0f889910d69b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}